# se-toolkit-hackathon

./: .env.docker.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: pyproject.toml
backend/src/exam_prep/: __init__.py  database.py
backend/src/exam_prep/data/: init.sql
backend/src/exam_prep/models/: __init__.py  attempt.py  task.py  theory.py  topic.py
backend/src/exam_prep/routers/: __init__.py  agent_ws.py  health.py  progress.py  tasks.py  theory.py  topics.py
backend/src/lms_backend/: auth.py  main.py  settings.py
backend/src/lms_backend/data/: init.sql
backend/src/lms_backend/routers/: __init__.py
caddy/: Caddyfile
client-web-react/: package-lock.json  package.json  vite.config.ts
client-web-react/src/: App.css  App.tsx  ChatPage.tsx  ExamPage.tsx  PracticePage.tsx  ProgressPage.tsx  StudentIdOverlay.tsx  TheoryPage.tsx
mcp/mcp-exam-prep/: pyproject.toml
mcp/mcp-exam-prep/src/mcp_exam_prep/: __init__.py  __main__.py  models.py  settings.py
nanobot/: entrypoint.py  pyproject.toml
nanobot/workspace/: _fetch_topics.py  _fetch_topics2.py
nanobot/workspace/skills/exam-prep/: SKILL.md
