[project]
name = "mcp-exam-prep"
version = "0.1.0"
description = "MCP server for the Exam Prep backend"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["mcp_exam_prep*"]
